<resources>
    <string name="app_name">SmartAgro</string>
    <string name="watch1">IWC Portugieser</string>
    <string name="O1">Luxury on Your Wrist</string>
    <string name="OB1">Let\'s Go</string>
    <string name="OS1">Luxury Watches</string>
    <string name="OSS1">Discover high-end luxury watches from premium brands.</string>
    <string name="OB2">Next</string>
    <string name="OS2">Exclusive Deals</string>
    <string name="OSS2">Get special discounts and offers on premium watches.</string>
    <string name="OB3">Next</string>
    <string name="OS3">Easy Shopping</string>
    <string name="OSS3">Simple checkout and secure payments for your favorite watches</string>
    <string name="OB4">Get Started</string>
    <string name="L1">login</string>
    <string name="S1">signup\n</string>
    <string name="LP1">Welcome Back</string>
    <string name="LP2">Login to your Account</string>
    <string name="LPF1">email</string>
    <string name="LPF2">password</string>
    <string name="LB">Login</string>
    <string name="SP1">Register</string>
    <string name="SP2">Create your new Account</string>
    <string name="SPF1">fName\n</string>
    <string name="SPF2">lName</string>
    <string name="SPF3">address</string>
    <string name="SPF4">email</string>
    <string name="SPF5">phone</string>
    <string name="SPF6">pass</string>
    <string name="SPF7">conPass</string>
    <string name="SP3">Register</string>
    <string name="SP4">Already have an account?</string>
    <string name="SP5">Login</string>
    <string name="H1">Hi Kanushka !</string>
    <string name="H2">Luxury or Sporty?</string>
    <string name="H3">Find the Watch That Defines You !</string>
    <string name="H4">"         Search"</string>
    <string name="WP1">$170000</string>
    <string name="watch2">"Arnold and Son Ultrathin "</string>
    <string name="watch3">Bovet Virtuoso VII</string>
    <string name="watch4">"H. Moser and Cie.  "</string>
    <string name="WP2">$123000</string>
    <string name="WP3">$138000</string>
    <string name="WP4">$140000</string>
    <string name="FP">Favorite Watches</string>
    <string name="CP1">My Cart</string>
    <string name="CP2">Total:                                               $170000</string>
    <string name="CB">Checkout</string>
    <string name="P1">Profile</string>
    <string name="PF1">Name</string>
    <string name="PF2">Email</string>
    <string name="PF3">Phone Number</string>
    <string name="PF4">Address</string>
    <string name="PD1">Kanushka Kahakotuwa</string>
    <string name="PD2">Kanushka@gmail.com</string>
    <string name="PD3">+94 77 313 7229</string>
    <string name="PD4">86/6 Colombo</string>
    <string name="PB1">Update</string>
    <string name="PB2">Logout</string>
</resources>